# sol2-test

./: .gitignore  CMakeLists.txt  README.md  sol2-test.sublime-project
.github/workflows/: build.yml
include/: Interpreter.h  Node.h  NodeDescriptor.h  Registry.h  real.h  scripting.h
lua/: RGBA2gray.lua  class.lua  registry.lua  script.lua
src/: Interpreter.cpp  Node.cpp  NodeDescriptor.cpp  Registry.cpp  main.cpp
